More work on Remote Control, and a refactor to use more JOSM code
Signed-off-by: Taylor Smock <taylor.smock@kaart.com>